WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241427
Start/stop ProcessStateMonitor with ApplicationStateTracker
https://bugs.webkit.org/show_bug.cgi?id=241427
Summary
Start/stop ProcessStateMonitor with ApplicationStateTracker
Sihui Liu
Reported
2022-06-08 10:55:31 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2022-06-08 15:02:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1393
Radar WebKit Bug Importer
Comment 2
2022-06-13 09:51:59 PDT
<
rdar://problem/95033829
>
EWS
Comment 3
2022-06-13 11:21:20 PDT
Committed
r295493
(
251498@main
): <
https://commits.webkit.org/251498@main
> Reviewed commits have been landed. Closing PR #1393 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug